Redesign write spec capture: structured *Op methods, no SQL parsing
Replace SQL-parsing approach with structured operation methods:
- w.createTableOp(name, schema, properties, partitionColumns) → TableHandle
- w.insertOp(t, data) — Seq[Map[String, Any]]
- w.deleteOp(t, predicate) — clean SQL predicate from user
- w.updateOp(t, predicate, set) — predicate + set map from user
- w.setPropertiesOp(t, properties)
- w.addColumnOp(t, col)
- w.truncateOp(t)

Each method:
1. Generates and executes one SQL statement
2. Records the structured operation (predicate/set/etc from user, not from delta log)
3. Data files captured from delta log after table copy (in buildSpec)

Schema is captured in canonical form from the delta log (not user strings).
Predicates come from user declarations — never parsed from Spark internals.

Col(name, dataType, nullable) for schema definitions.

49/50 tests pass. All 7 writeSpec tests rewritten to use *Op API.

Co-authored-by: Isaac